Fix side scroll on mobile

--- a/titletowns/css/style2.css
+++ b/titletowns/css/style2.css
@@ -1123,7 +1123,8 @@ section.side {
     font-size: 1.1rem;
     line-height: 1.8;
     min-height: 95vh;
-    color: #b5b5b5; }
+    color: #b5b5b5;
+    transition: all 250ms ease-in-out; }
     @media screen and (min-width: 768px) {
       .side article .step {
         margin: 0;
@@ -1133,6 +1134,19 @@ section.side {
       margin-top: 50vh; }
     .side article .step.active {
       color: #333; }
+
+@media screen and (max-width: 768px) {
+  .step-inner {
+    background-color: white;
+    -webkit-box-shadow: 0px 0px 41px -1px rgba(153, 153, 153, 0.8);
+    -moz-box-shadow: 0px 0px 41px -1px rgba(153, 153, 153, 0.8);
+    box-shadow: 0px 0px 41px -1px rgba(153, 153, 153, 0.8);
+    border-radius: 2px;
+    padding: 10px 25px;
+    width: 75%; } }
+
+#step3 {
+  min-height: 100vh; }
 
 .side figure {
   align-items: center;
@@ -1271,10 +1285,16 @@ article {
 
 .fleft {
   float: left;
-  width: 40%; }
+  width: 100%; }
+  @media screen and (min-width: 768px) {
+    .fleft {
+      width: 40%; } }
 
 .fright {
-  width: 60%; }
+  width: 100%; }
+  @media screen and (min-width: 768px) {
+    .fright {
+      width: 60%; } }
 
 .s1switch {
   font-family: "Roboto Mono", monospace;
